--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,26 +10,26 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">{{ 'site_title'|trans }}</a>
+                <a class="navbar-brand" href="{{ path('index') }}">{{ 'site_title'|trans }}</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('product_list') }}">{{ 'products'|trans }}</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{ app.request.locale|upper }}
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="{{ path('switch_locale', {'locale': 'en'}) }}">EN</a></li>
-                                <li><a class="dropdown-item" href="{{ path('switch_locale', {'locale': 'fr'}) }}">FR</a></li>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="{{ path('switch_locale', {locale: 'fr'}) }}">Français</a></li>
+                                <li><a class="dropdown-item" href="{{ path('switch_locale', {locale: 'en'}) }}">English</a></li>
                             </ul>
                         </li>
                     </ul>
