--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -1,25 +1,66 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'product_list_title'|trans }}{% endblock %}
+{% block title %}Product List{% endblock %}
 
 {% block body %}
-    <h1>{{ 'product_list_title'|trans }}</h1>
+    <h1>Product List</h1>
 
-    <div class="row">
-        {% for product in products %}
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ product.name }}</h5>
-                        {% if product.image %}
-                            <img src="images/{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
-                        {% endif %}
-                        
-                        
-                        <a href="#" class="btn btn-primary">{{ 'view_detail'|trans }}</a>
-                    </div>
-                </div>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
             </div>
         {% endfor %}
-    </div>
+    {% endfor %}
+
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('product_new') }}">Create new</a>
+    {% endif %}
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Image</th>
+                <th>Price</th>
+                <th>Description</th>
+                <th>Stock</th>
+                <th>Status</th>
+                <th>Category</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for product in products %}
+            <tr>
+                <td>{{ product.id }}</td>
+                <td>{{ product.name }}</td>
+                <td>
+                    {% if product.Image %}
+                        <img src="{{ asset('images/' ~ product.Image.url) }}" alt="{{ product.name }}" width="100">
+                    {% endif %}
+                </td>
+                <td>{{ product.price }}</td>
+                <td>{{ product.description }}</td>
+                <td>{{ product.stock }}</td>
+                <td>{{ product.status }}</td>
+                <td>{{ product.Category ? product.Category.name : '' }}</td>
+                <td>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+                        <form method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
+                            <button class="btn">Delete</button>
+                        </form>
+                    {% endif %}
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="9">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
