--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         {% endblock %}
     </head>
-    <body>
+    <body data-controller="cart">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ path('index') }}">{{ 'site_title'|trans }}</a>
@@ -23,6 +23,12 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('cart_index') }}">
+                                <i class="fas fa-shopping-cart"></i>
+                                <span id="cart-icon" class="badge bg-danger" data-cart-target="cartCount">{{ cart_items_count }}</span>
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{ app.request.locale|upper }}
