--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <h1>Your Cart</h1>
 
-    {% if items|length > 0 %}
-        <table class="table">
+    {% if cart|length > 0 %}
+        <table class="table" data-controller="cart">
             <thead>
                 <tr>
                     <th>Product</th>
@@ -17,14 +17,14 @@
                 </tr>
             </thead>
             <tbody>
-                {% for item in items %}
-                    <tr>
+                {% for item in cart %}
+                    <tr data-cart-target="itemRow" data-product-id="{{ item.product.id }}">
                         <td>{{ item.product.name }}</td>
-                        <td>{{ item.product.price }}</td>
+                        <td>{{ item.product.price }} €</td>
                         <td>{{ item.quantity }}</td>
-                        <td>{{ item.product.price * item.quantity }}</td>
+                        <td>{{ item.product.price * item.quantity }} €</td>
                         <td>
-                            <a href="{{ path('cart_remove', {'id': item.product.id}) }}" class="btn btn-danger">Remove</a>
+                            <a href="{{ path('cart_remove', {id: item.product.id}) }}" class="btn btn-danger btn-sm" data-action="cart#remove">Remove</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -32,12 +32,11 @@
             <tfoot>
                 <tr>
                     <td colspan="3" class="text-right"><strong>Total:</strong></td>
-                    <td>{{ total }}</td>
+                    <td data-cart-target="cartTotal">{{ total }} €</td>
                     <td></td>
                 </tr>
             </tfoot>
         </table>
-        <a href="{{ path('order_new') }}" class="btn btn-primary">Checkout</a>
     {% else %}
         <p>Your cart is empty.</p>
     {% endif %}
