--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -5,9 +5,6 @@
 {% block body %}
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>{{ 'products'|trans }}</h1>
-        {% if is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('product_new') }}" class="btn btn-primary">{{ 'create_product'|trans }}</a>
-        {% endif %}
     </div>
 
     {% for message in app.flashes('success') %}
@@ -28,7 +25,7 @@
                         <p class="card-text">{{ product.description }}</p>
                         <p class="card-text"><strong>{{ 'price'|trans }}:</strong> {{ product.price }} €</p>
                         <p class="card-text"><strong>{{ 'stock'|trans }}:</strong> {{ product.stock }}</p>
-                        <a href="{{ path('cart_add', {'id': product.id}) }}" class="btn btn-primary">{{ 'add_to_cart'|trans }}</a>
+                        <a href="{{ path('cart_add', {'id': product.id}) }}" class="btn btn-primary" data-action="cart#add">{{ 'add_to_cart'|trans }}</a>
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-secondary">{{ 'edit'|trans }}</a>
                         {% endif %}
